manifest/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ops-inspiration-console-service
  namespace: ops-inspiration-console
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-name: "ops-inspiration-console-lb"
    service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: "Project=ops-inspiration-console,Environment=production,Name=ops-inspiration-console-lb"
    external-dns.alpha.kubernetes.io/hostname: oic.gnaig.click
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  loadBalancerClass: service.k8s.aws/nlb
  selector:
    app: ops-inspiration-console-app
  ports:
    - port: 80
      targetPort: 8080
